--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -2,7 +2,7 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    background-image: url("./pattern.png");
+    background-image: url("./pattern4.png");
 }
 
 h1 {
