--- a/templates/indexation.html
+++ b/templates/indexation.html
@@ -27,7 +27,7 @@
                 
             </button>
 
-            <div class = "content">
+            <div>
                 <h3>
                     Ocorrências
                 </h3>
