--- a/templates/result.html
+++ b/templates/result.html
@@ -16,14 +16,22 @@
     </h1>
 
     <div>
-        <p><span>{{result.cont}}</span> Resultados encontrados em <span>{{result.duration}}</span> segundos para o termo <span>{{term}}</span></p>
+        <p><span style = "font-weight: bold;">{{result.cont}}</span> Resultados encontrados em <span>{{result.duration}}</span> segundos para o termo <span style = "font-weight: bold;">{{term}}</span></p>
         {%for ocu in result['occurences']%}
             <div>
-                <a href="redirect/{{ocu.index}}/{{term}}">
-                    <h4>
-                    Texto de {{ocu.user}}
-                    </h4>
-                </a>
+                <span>
+                    <a href="redirect/{{ocu.index}}/{{term}}">
+                        <h4>
+                        Texto de {{ocu.user}}
+                        </h4>
+                    </a>
+                    
+                    <span style = "font-weight: bold;">
+                        <span>Score: </span> <span>{{ocu.relevance.score}}</span>
+                        <span>Potencial Máximo: </span> <span>{{ocu.relevance.wordScore}}</span>
+                        <span>{{ocu.relevance.percent}} %</span>
+                    </span>
+                </span>
 
                 <p class = "preview">
                     {{ocu.preview}}
